# Sunshine-Foundation

./: .codeql-prebuild-cpp-Windows.sh  .gitignore  .gitmodules  README.de.md  README.en.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  package.json  translate_simple.py  update_language_selector.py  vite.config.js  vite.dev.config.js
.github/: RELEASE_TEMPLATE.md
.github/workflows/: i18n-validation.yml  main.yml  sign-and-repackage.yml  signpath-signing.yml  test-signpath.yml  translate-simple.yml
cmake/compile_definitions/: common.cmake  linux.cmake  macos.cmake  windows.cmake
cmake/packaging/: common.cmake  windows.cmake  windows_nsis.cmake
cmake/prep/: options.cmake
cmake/targets/: rust_tray.cmake  windows.cmake
docs/: WEBUI_DEVELOPMENT.md  configuration.md  contributing.md  webhook_format.md
rust_tray/: Cargo.toml  plan.md
rust_tray/include/: rust_tray.h
rust_tray/src/: actions.rs  config.rs  dark_mode.rs  ffi.rs  i18n.rs  lib.rs
scripts/: README_I18N.md  generate-checksums.ps1  package-signpath-config.bat  validate-i18n.js
src/: audio.cpp  config.cpp  config.h  confighttp.cpp  globals.h  main.cpp  nvhttp.cpp  process.cpp  process.h  rtsp.cpp  rtsp.h  stream.cpp  stream.h  system_tray.cpp  system_tray.h  system_tray_i18n.cpp  system_tray_i18n.h  system_tray_rust.cpp  thread_safe.h  utility.h  video.cpp  video.h  video_colorspace.cpp  video_colorspace.h  webhook.cpp  webhook.h  webhook_format.cpp  webhook_format.h  webhook_httpsclient.cpp  webhook_httpsclient.h
src/display_device/: session.cpp  session.h  vdd_utils.cpp  vdd_utils.h
src/nvenc/: nvenc_config.h
src/nvenc/common_impl/: nvenc_base.cpp
src/platform/: common.h
src/platform/linux/: cuda.cu  graphics.cpp  misc.cpp
src/platform/macos/: misc.mm
src/platform/windows/: display.h  display_base.cpp  display_vram.cpp  display_wgc.cpp  dsu_server.cpp  ftime_compat.cpp  input.cpp  misc.cpp  misc.h  win_dark_mode.cpp  win_dark_mode.h
src/platform/windows/display_device/: settings.cpp  settings_topology.cpp  windows_lock_screen.cpp  windows_lock_screen.h  windows_utils.h
src/sender/: sender_main.cpp
src/subprocess/: ipc_pipe.cpp  ipc_protocol.h  subprocess_manager.h
src_assets/common/assets/web/: Navbar.vue  SetupWizard.vue  apps.html  config.html  firebase-config.js  index.html  init.js  locale.js  password.html  pin.html  settings.html  troubleshooting.html  welcome.html  welcome.html.template
src_assets/common/assets/web/components/: AppCard.vue  AppEditor.vue  AppListItem.vue  Checkbox.vue  CommandTable.vue  CoverFinder.vue  DetachedCommands.vue  ImageSelector.vue  LogsSection.vue  ScanResultModal.vue  SetupWizard.vue  TroubleshootingCard.vue
src_assets/common/assets/web/components/common/: ErrorLogs.vue  Locale.vue  ResourceCard.vue  ThemeToggle.vue  VersionCard.vue
src_assets/common/assets/web/composables/: useApps.js  useBackground.js  useConfig.js  useLogs.js  useModalScrollLock.js  usePin.js  useSetupWizard.js  useTheme.js  useTroubleshooting.js  useUserSettings.js  useVersion.js  useWelcome.js
src_assets/common/assets/web/config/: firebase.js  i18n.js
src_assets/common/assets/web/scripts/: extract-welcome-locales.js
src_assets/common/assets/web/services/: appService.js
src_assets/common/assets/web/styles/: apps.css  apps.less  global.css  global.less  modal-glass.css  modal-glass.less  var.css  welcome.css
src_assets/common/assets/web/utils/: constants.js  coverSearch.js  errorHandler.js  imageUtils.js  steamApi.js  theme.js  validation.js
src_assets/common/assets/web/views/: Apps.vue  Config.vue  Home.vue  Password.vue  Pin.vue  Troubleshooting.vue  UserSettings.vue  Welcome.vue
src_assets/windows/assets/: apps.json
src_assets/windows/assets/shaders/directx/: simple_cursor_ps.hlsl  simple_cursor_vs.hlsl
src_assets/windows/misc/: install_portable.bat  uninstall_portable.bat
src_assets/windows/misc/languages/: de-DE.lang  en-US.lang  fr-FR.lang  ja-JP.lang  ru-RU.lang  zh-Simple.lang
src_assets/windows/misc/migration/: IMAGE_MIGRATION.md  migrate-config.bat  migrate-images.ps1
src_assets/windows/misc/vdd/: install-vdd.bat
src_assets/windows/misc/vdd/driver/: MttVDD.inf  ZakoVDD.inf  mttvdd.cat  zakovdd.cat
tests/unit/: test_video.cpp  test_webhook.cpp  test_webhook_config.cpp
tools/: CMakeLists.txt  build-qiin-tabtip.sh  build-qiin-taptip.sh  qiin-tabtip.cpp  qiin-tabtip_i18n.cpp  qiin-tabtip_i18n.h  qiin-taptip.cpp  virtual-keyboard.cpp
(+34 files in other folders)
